--- a/dammit/weblog/templates/article.html
+++ b/dammit/weblog/templates/article.html
@@ -1,16 +1,8 @@
-{% extends "base_generic.html" %}
+<h1>{{ article.title }}</h1>
 
-{% block title %}{{ article.title }} | {{site.title}}{% endblock %}
-
-{% block content %}
-<h1>{{ section.title }}</h1>
-
-{% for story in story_list %}
 <h2>
-  <a href="{{ story.get_absolute_url }}">
+  <a href="{{ article.get_absolute_url }}">
     {{ story.headline|upper }}
   </a>
 </h2>
 <p>{{ story.tease|truncatewords:"100" }}</p>
-{% endfor %}
-{% endblock %}
