--- a/dammit/weblog/templates/article_page.html
+++ b/dammit/weblog/templates/article_page.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block title %}{{ article.title }} | {{site.title}}{% endblock %}
+{% block pagetitle %}{{ article.title }}{% endblock %}
 
 {% block content %}
 {% include "article.html" %}
