Some template/i18n fixes

--- a/dammit/weblog/templates/base_generic.html
+++ b/dammit/weblog/templates/base_generic.html
@@ -1,6 +1,7 @@
 <html>
 {% block title %}{% block pagetitle %}{% endblock %} | {{site.title}}{% endblock %}
 
-{%block content %}
+{% block content %}
 
+{% endblock %}
 </html>
